<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Aux Joyeux Pompiers</string>

    <string name="no_image">Pas d\'image</string>

    <string name="action_settings">Reglages</string>
    <string name="action_connexion">Se connecter</string>
    <string name="action_deconnection">Déconnexion</string>
    <string name="action_quit">Quitter</string>

    <string name="yes">Oui</string>
    <string name="no">Non</string>

    <string name="title_notification_intervention">Nouvelle intervention</string>
    <string name="presentation_text">Aux Joyeux Pompiers</string>
    <string name="url_text">URL : </string>
    <string name="url_hint">http://</string>
    <string name="login_text">Login   :</string>
    <string name="login_hint">Identifiant</string>
    <string name="password_text">Password : </string>
    <string name="password_hint">Mot de passe</string>
    <string name="codis_role_rb_text">CODIS</string>
    <string name="user_role_rb_text">Sapeur</string>
    <string name="button_valid">Valider</string>
    <string name="button_return">Retour</string>
    <string name="button_endmain">Fin</string>
    <string name="title_activity_moyens_suppl">Moyens suppl.</string>
    <string name="valider_moyens_supp">Envoyer les moyens</string>

    <string name="address_text">Adresse   :</string>

    <string name="label_text">"Nom d'intervention :"</string>

    <string name="address_hint">Rue, Voie, Allée</string>
    <string name="codepostal_hint">Code Postal</string>
    <string name="ville_hint">Ville</string>
    <string name="sinistreCode_text">Selection du code sinistre :</string>
    <string name="sinitre_rd_code_AVP">AVP</string>
    <string name="sinitre_rd_code_FHA">FHA</string>
    <string name="sinitre_rd_code_SAP">SAP</string>

    <string name="intervention_list_text">Interventions en cours</string>
    <string name="button_add">Ajouter</string>
    <string name="button_refresh">Rafraîchir</string>
    <string name="button_MeanTableView">Afficher Tous les moyens</string>
    <string name="add_new_mean">Ajout de moyens supp.</string>
    <string name="query_position_confirmation">Confirmer la position du moyen?</string>

    <string name="switch_dorne_mode">Passer en mode drone</string>
    <string name="switch_moyen_mode">Passer en mode gestion des moyens</string>
    <string name="disp_moyen_table">Liste des moyens</string>

    <string name="management_target">Gestion du trajet</string>
    <string name="validate_target">Valider</string>
    <string name="close_target">Clore</string>
    <string name="clean_target">Effacer</string>
    <string name="select_text_view">Demander un moyen</string>

    <string name="moyens_a_placer">Moyens dispo à placer</string>

    <string name="intervention_details_nom_err">" - Aucun Nom -"</string>
    <string name="intervention_details_nom_text">" Nom : "</string>
    <string name="intervention_details_code_err">" - Aucun Code -"</string>
    <string name="intervention_details_code_text">" Code : "</string>
    <string name="intervention_details_adresse_err">" - Aucune Adresse -"</string>
    <string name="intervention_details_adresse_text">" Adresse : "</string>
    <string name="intervention_details_ville_err">" - Aucune Ville -"</string>
    <string name="intervention_details_ville_text">" Ville : "</string>
    <string name="intervention_details_moyen_titre">" Moyens à valider : "</string>
    <string name="intervention_details_moyen_text">" - Aucun Moyen en attente -"</string>
    <string name="moyens_refuses">Moyens supp. refusés</string>
    <string name="moyens_a_valider">Moyens supp. à valider</string>
    <string name="moyens_en_transit">Moyens en transit</string>
    <string name="actions_moyens">Sélectionnez une action sur le moyen</string>
    <string name="mean_table_title">"Table des moyens de l'intervention"</string>

    <string name="withRefusedMeans">Inclure les moyens refusés</string>
    <string name="timeColorDisp">"Couleur en fonction de l'état"</string>
</resources>
