<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="fr.m2gla.istic.project.fragments.DroneTargetActionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/management_target" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/validTargetDrone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/validate_target" />

            <Button
                android:id="@+id/closeTargetDrone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/close_target" />

            <Button
                android:id="@+id/cleanTargetDrone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clean_target" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
