<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:id="@+id/TableDescLayout"
        android:layout_above="@+id/activityTableButtonLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/MeanTableCheckLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/meanTableIdDisp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mean_table_title"
                android:textColor="#00FF00"
                android:layout_weight="8"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <CheckBox
                android:id="@+id/timeColorCheckDisp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="MeanTableViewRefresh"
                android:text="@string/timeColorDisp" />

            <CheckBox
                android:id="@+id/refusedMeanCheckDisp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="MeanTableViewRefresh"
                android:text="@string/withRefusedMeans" />

        </LinearLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:stretchColumns="0"
            android:layout_height="wrap_content"
            android:id="@+id/titleMeanTable">
        </TableLayout>

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scrollMeanTable"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TableLayout
                android:layout_width="fill_parent"
                android:stretchColumns="0"
                android:layout_height="wrap_content"
                android:id="@+id/meanTable">
            </TableLayout>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/activityTableButtonLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/refreshInterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="MeanTableViewRefresh"
            android:text="@string/button_refresh" />

        <Button
            android:id="@+id/addInterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="interventionSelection"
            android:text="@string/button_add" />

        <Button
            android:id="@+id/finInterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="endMeanTableView"
            android:text="@string/button_return" />

    </LinearLayout>


</RelativeLayout>