<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".4"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight=".15"
            android:text="@string/moyens_a_placer" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.85"
            android:id="@android:id/list" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight=".15"
            android:text="@string/moyens_a_valider" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.85"
            android:id="@+id/list_not_validated" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight=".15"
            android:text="@string/moyens_en_transit" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.85"
            android:id="@+id/list_en_transit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight=".15"
            android:text="@string/moyens_refuses" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.85"
            android:id="@+id/list_refused" />
    </LinearLayout>
</LinearLayout>