<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:id="@+id/mainLayout"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/loginLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_weight=".5"
            android:layout_height="0dp"
            android:id="@+id/identGetLayout"
            android:layout_margin="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/login_text"
                android:id="@+id/loginDisp"
                android:gravity="fill_vertical" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight=".7"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:hint="@string/login_hint"
                android:id="@+id/loginGet"
                android:gravity="fill_vertical" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_weight=".5"
            android:layout_height="0dp"
            android:id="@+id/passwordGetLayout"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/password_text"
                android:id="@+id/passwordDisp"
                android:gravity="fill_vertical" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight=".7"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:id="@+id/passwordGet"
                android:gravity="fill_vertical" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/roleGetLayout"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/loginLayout">

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/userRadioButton"
            android:id="@+id/roleRadioGroup"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="match_parent"
                android:text="@string/user_role_rb_text"
                android:id="@+id/userRadioButton" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="match_parent"
                android:text="@string/codis_role_rb_text"
                android:id="@+id/codisRadioButton" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_valid"
        android:id="@+id/validButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="activerValider" />
    <!--<LinearLayout-->
    <!--android:orientation="horizontal"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:id="@+id/validLoginLayout"-->
    <!--android:layout_margin="30dp">-->

    <!--<Button-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/button_valid"-->
    <!--android:id="@+id/validButton"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:layout_alignParentLeft="true"-->
    <!--android:layout_alignParentStart="true"-->
    <!--android:onClick="activerValider"-->
    <!--android:layout_weight="1" />-->

    <!--<Button-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/button_endmain"-->
    <!--android:id="@+id/finMainButton"-->
    <!--android:onClick="finMain"-->
    <!--android:layout_weight="1" />-->

    <!--</LinearLayout>-->

</RelativeLayout>
