<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonLayout"
        android:layout_centerHorizontal="true"
        android:id="@+id/listLayout"
        >
        <fragment
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            class="fr.m2gla.istic.projet.fragments.PresentationFragment"
            android:id="@+id/fragment_presentation" />

        <fragment
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            class="fr.m2gla.istic.projet.fragments.InterventionListFragment"
            android:id="@+id/fragment_intervention_list" />

    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/buttonLayout"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_refresh"
            android:id="@+id/refreshInterButton"
            android:onClick="interventionRefresh"
            android:layout_weight="1"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_add"
            android:id="@+id/addInterButton"
            android:onClick="interventionSelection"
            android:layout_weight="1"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_return"
            android:id="@+id/finInterButton"
            android:onClick="endInterventionSelection"
            android:layout_weight="1"
            />

    </LinearLayout>


</RelativeLayout>